docs: add create-preact

--- a/src/content/templates.mdx
+++ b/src/content/templates.mdx
@@ -1,9 +1,7 @@
 ## Templates
 
+- [preactjs/create-preact](https://github.com/preactjs/create-preact) - Official preact CLI to create a Vite-powered Preact app in seconds
 - [rschristian/preact-project-demos](https://github.com/rschristian/preact-project-demos) - Preact Demos for various types of applications
 - [Munawwar/preact-mpa-template](https://github.com/Munawwar/preact-mpa-template) - Example repo to start a multi-page app/website (MPA) with Preact, express and esbuild.
 - [Munawwar/preact-spa-template](https://github.com/Munawwar/preact-spa-template) - Preact single-page app starter template. This template is tuned for "SPA" sites; sites that do not need server side rendering (SSR)
 - [preachjs/docs-template](https://github.com/preachjs/docs-template) - A minimal template for documentation (Probably looking at it's demo right now)
-
-
-
