docs: Added @pretch/preact

--- a/src/content/essentials.mdx
+++ b/src/content/essentials.mdx
@@ -6,3 +6,6 @@
 
 ### State Management
 - [preactjs/signals](https://github.com/preactjs/signals) - Manage state with style in every framework 
+
+### HTTP Client
+- [@pretch/preact](https://github.com/EGAMAGZ/pretch) -  A lightweight and flexible fetch enhancement library that works with vanilla JavaScript, React, and Preact
