--- a/src/content/aesthetics.mdx
+++ b/src/content/aesthetics.mdx
@@ -1,12 +1,18 @@
 ## Aesthetics
 
 ### UI
+
 - [@preachjs/datepicker](https://github.com/preachjs/datepicker) - Headless Datepicker(s) for preact
 - [@chakra-ui/react](https://v2.chakra-ui.com/) - Create accessible React apps with speed (Usable with "preact/compat")
 
 ### Styling
 
-- [tw-in-js/twind](https://github.com/tw-in-js/twind) - The smallest, fastest, most feature complete Tailwind-in-JS solution in existence. 
+- [tw-in-js/twind](https://github.com/tw-in-js/twind) - The smallest, fastest, most feature complete Tailwind-in-JS solution in existence.
 
-### Charts 
+### Charts
+
 - [plotery](https://shelacek.bitbucket.io/plotery) - 5kB declarative SVG-based charting library for Preact
+
+### Helpers
+
+- [@preachjs/popper](https://github.com/preachjs/popper) - Micro positioning library (Vanilla JS)
