docs: add Formica library to essentials

--- a/src/content/essentials.mdx
+++ b/src/content/essentials.mdx
@@ -9,3 +9,7 @@
 
 ### HTTP Client
 - [@pretch/preact](https://github.com/EGAMAGZ/pretch) -  A lightweight and flexible fetch enhancement library that works with vanilla JavaScript, React, and Preact
+
+### Forms
+
+- [@shelacek/formica](https://bitbucket.org/shelacek/formica/src/master/) - Preact forms made easy!
