chore: add preachjs/themes

--- a/src/content/aesthetics.mdx
+++ b/src/content/aesthetics.mdx
@@ -7,6 +7,7 @@
 
 ### Styling
 
+- [preachjs/themes](https://github.com/preachjs/themes) - Lightweight theme management system for Preact applications
 - [tw-in-js/twind](https://github.com/tw-in-js/twind) - The smallest, fastest, most feature complete Tailwind-in-JS solution in existence.
 
 ### Charts
