--- a/src/content/aesthetics.mdx
+++ b/src/content/aesthetics.mdx
@@ -5,6 +5,10 @@
 - [@preachjs/datepicker](https://github.com/preachjs/datepicker) - Headless Datepicker(s) for preact
 - [@chakra-ui/react](https://v2.chakra-ui.com/) - Create accessible React apps with speed (Usable with "preact/compat")
 
+### Animation 
+
+- [preact-in-motion](https://github.com/alloc/preact-in-motion) - Light, elegant animation plugin for Preact (powered by Motion.dev and WAAPI)
+
 ### Styling
 
 - [preachjs/themes](https://github.com/preachjs/themes) - Lightweight theme management system for Preact applications
